{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 40,
  "lineage": "aa87e838-d92d-bb71-0c63-07cc346dbdba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011e99819f9a75c2a",
            "arn": "arn:aws:ec2:us-west-1:909799647907:elastic-ip/eipalloc-011e99819f9a75c2a",
            "association_id": "eipassoc-096508c043bdadbc2",
            "domain": "vpc",
            "id": "eipalloc-011e99819f9a75c2a",
            "network_border_group": "us-west-1",
            "network_interface": "eni-06a8292af9b7d7d59",
            "private_dns": "ip-10-10-1-18.us-west-1.compute.internal",
            "private_ip": "10.10.1.18",
            "public_dns": "ec2-13-52-140-38.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.140.38",
            "public_ipv4_pool": "amazon",
            "region": "us-west-1",
            "tags": {
              "Name": "private-eks-cluster-nat-eip"
            },
            "tags_all": {
              "Name": "private-eks-cluster-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:internet-gateway/igw-0023621cf88734e38",
            "id": "igw-0023621cf88734e38",
            "owner_id": "909799647907",
            "region": "us-west-1",
            "tags": {
              "Name": "private-eks-cluster-igw"
            },
            "tags_all": {
              "Name": "private-eks-cluster-igw"
            },
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011e99819f9a75c2a",
            "association_id": "eipassoc-096508c043bdadbc2",
            "connectivity_type": "public",
            "id": "nat-0d73a9f0ab1e38dfb",
            "network_interface_id": "eni-06a8292af9b7d7d59",
            "private_ip": "10.10.1.18",
            "public_ip": "13.52.140.38",
            "region": "us-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0225439023c4bea03",
            "tags": {
              "Name": "private-eks-cluster-natgw"
            },
            "tags_all": {
              "Name": "private-eks-cluster-natgw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:route-table/rtb-06a876c6fb84ab4ea",
            "id": "rtb-06a876c6fb84ab4ea",
            "owner_id": "909799647907",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d73a9f0ab1e38dfb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-eks-cluster-private-rt"
            },
            "tags_all": {
              "Name": "private-eks-cluster-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "rtb-06a876c6fb84ab4ea",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:route-table/rtb-03d48cfcf80ba0660",
            "id": "rtb-03d48cfcf80ba0660",
            "owner_id": "909799647907",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0023621cf88734e38",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-eks-cluster-public-rt"
            },
            "tags_all": {
              "Name": "private-eks-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "rtb-03d48cfcf80ba0660",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a6b0c5548e75b30",
            "region": "us-west-1",
            "route_table_id": "rtb-06a876c6fb84ab4ea",
            "subnet_id": "subnet-05f17513bb125add4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a67c17accc0813e5",
            "region": "us-west-1",
            "route_table_id": "rtb-06a876c6fb84ab4ea",
            "subnet_id": "subnet-0f22eb0fe7c7915ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0788dd552b0d0732a",
            "region": "us-west-1",
            "route_table_id": "rtb-03d48cfcf80ba0660",
            "subnet_id": "subnet-0225439023c4bea03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07736cbfb2b99a061",
            "region": "us-west-1",
            "route_table_id": "rtb-03d48cfcf80ba0660",
            "subnet_id": "subnet-021db68fb3b1a81e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:security-group/sg-01314471ce12f46e0",
            "description": "Security group for interface endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01314471ce12f46e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "private-eks-cluster-endpoints-sg",
            "name_prefix": "",
            "owner_id": "909799647907",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-eks-cluster-endpoints-sg"
            },
            "tags_all": {
              "Name": "private-eks-cluster-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "sg-01314471ce12f46e0",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:security-group/sg-0f4b7f52c105163f6",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4b7f52c105163f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow nodes to reach control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow intra-node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "private-eks-cluster-workers-sg",
            "name_prefix": "",
            "owner_id": "909799647907",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-eks-cluster-workers-sg"
            },
            "tags_all": {
              "Name": "private-eks-cluster-workers-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "sg-0f4b7f52c105163f6",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:subnet/subnet-05f17513bb125add4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f17513bb125add4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909799647907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "private-eks-cluster-private-0"
            },
            "tags_all": {
              "Name": "private-eks-cluster-private-0"
            },
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "subnet-05f17513bb125add4",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:subnet/subnet-0f22eb0fe7c7915ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f22eb0fe7c7915ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909799647907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "private-eks-cluster-private-1"
            },
            "tags_all": {
              "Name": "private-eks-cluster-private-1"
            },
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "subnet-0f22eb0fe7c7915ac",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:subnet/subnet-0225439023c4bea03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0225439023c4bea03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "909799647907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "private-eks-cluster-public-0"
            },
            "tags_all": {
              "Name": "private-eks-cluster-public-0"
            },
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "subnet-0225439023c4bea03",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:subnet/subnet-021db68fb3b1a81e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021db68fb3b1a81e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "909799647907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "private-eks-cluster-public-1"
            },
            "tags_all": {
              "Name": "private-eks-cluster-public-1"
            },
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "subnet-021db68fb3b1a81e1",
            "region": "us-west-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:vpc/vpc-0d9268359fbd3a194",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0108427693a030c36",
            "default_route_table_id": "rtb-05245b594f5e2777f",
            "default_security_group_id": "sg-008cd063b5ae11df0",
            "dhcp_options_id": "dopt-0e70f7600c3f3fd01",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9268359fbd3a194",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05245b594f5e2777f",
            "owner_id": "909799647907",
            "region": "us-west-1",
            "tags": {
              "Name": "private-eks-cluster-vpc"
            },
            "tags_all": {
              "Name": "private-eks-cluster-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:vpc-endpoint/vpce-08ebbd226c93e8ce9",
            "dns_entry": [
              {
                "dns_name": "vpce-08ebbd226c93e8ce9-431sy3im.ec2.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-08ebbd226c93e8ce9-431sy3im-us-west-1c.ec2.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-08ebbd226c93e8ce9-431sy3im-us-west-1a.ec2.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "ec2.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z02548572DITVV300V094"
              },
              {
                "dns_name": "ec2.us-west-1.api.aws",
                "hosted_zone_id": "Z01053431TG114L22TNUY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08ebbd226c93e8ce9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-017160fa1012231f1",
              "eni-0d1d6680bf43624fa"
            ],
            "owner_id": "909799647907",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-01314471ce12f46e0"
            ],
            "service_name": "com.amazonaws.us-west-1.ec2",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.11.18",
                "subnet_id": "subnet-05f17513bb125add4"
              },
              {
                "ipv4": "10.10.12.4",
                "subnet_id": "subnet-0f22eb0fe7c7915ac"
              }
            ],
            "subnet_ids": [
              "subnet-05f17513bb125add4",
              "subnet-0f22eb0fe7c7915ac"
            ],
            "tags": {
              "Name": "private-eks-cluster-ec2-endpoint"
            },
            "tags_all": {
              "Name": "private-eks-cluster-ec2-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints_sg",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ecr.api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:vpc-endpoint/vpce-0c7965a602862edc5",
            "dns_entry": [
              {
                "dns_name": "vpce-0c7965a602862edc5-rxydg3mw.api.ecr.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-0c7965a602862edc5-rxydg3mw-us-west-1a.api.ecr.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-0c7965a602862edc5-rxydg3mw-us-west-1c.api.ecr.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "api.ecr.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z06121101L865I1NXEZ36"
              },
              {
                "dns_name": "ecr.us-west-1.api.aws",
                "hosted_zone_id": "Z061136115IP1V921VLVI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c7965a602862edc5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0673d60c1d026d4e1",
              "eni-075c6a7c5669e7084"
            ],
            "owner_id": "909799647907",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-01314471ce12f46e0"
            ],
            "service_name": "com.amazonaws.us-west-1.ecr.api",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.11.126",
                "subnet_id": "subnet-05f17513bb125add4"
              },
              {
                "ipv4": "10.10.12.115",
                "subnet_id": "subnet-0f22eb0fe7c7915ac"
              }
            ],
            "subnet_ids": [
              "subnet-05f17513bb125add4",
              "subnet-0f22eb0fe7c7915ac"
            ],
            "tags": {
              "Name": "private-eks-cluster-ecr.api-endpoint"
            },
            "tags_all": {
              "Name": "private-eks-cluster-ecr.api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints_sg",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ecr.dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:vpc-endpoint/vpce-065508f7549bd7eb7",
            "dns_entry": [
              {
                "dns_name": "vpce-065508f7549bd7eb7-ew0a1vrx.dkr.ecr.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-065508f7549bd7eb7-ew0a1vrx-us-west-1c.dkr.ecr.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-065508f7549bd7eb7-ew0a1vrx-us-west-1a.dkr.ecr.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "dkr.ecr.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z008578522PMENHMXMR02"
              },
              {
                "dns_name": "*.dkr.ecr.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z008578522PMENHMXMR02"
              },
              {
                "dns_name": "dkr-ecr.us-west-1.on.aws",
                "hosted_zone_id": "Z010332339PM5HBJQAAX"
              },
              {
                "dns_name": "*.dkr-ecr.us-west-1.on.aws",
                "hosted_zone_id": "Z010332339PM5HBJQAAX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-065508f7549bd7eb7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06f61d0c86412b6eb",
              "eni-0c9ebbd609f152a4d"
            ],
            "owner_id": "909799647907",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-01314471ce12f46e0"
            ],
            "service_name": "com.amazonaws.us-west-1.ecr.dkr",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.11.216",
                "subnet_id": "subnet-05f17513bb125add4"
              },
              {
                "ipv4": "10.10.12.55",
                "subnet_id": "subnet-0f22eb0fe7c7915ac"
              }
            ],
            "subnet_ids": [
              "subnet-05f17513bb125add4",
              "subnet-0f22eb0fe7c7915ac"
            ],
            "tags": {
              "Name": "private-eks-cluster-ecr.dkr-endpoint"
            },
            "tags_all": {
              "Name": "private-eks-cluster-ecr.dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints_sg",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:vpc-endpoint/vpce-06b8e011c36b307f2",
            "dns_entry": [
              {
                "dns_name": "vpce-06b8e011c36b307f2-1csjvhyo.logs.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-06b8e011c36b307f2-1csjvhyo-us-west-1c.logs.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-06b8e011c36b307f2-1csjvhyo-us-west-1a.logs.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "logs.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z01052251TWCZQ7BS9451"
              },
              {
                "dns_name": "logs.us-west-1.api.aws",
                "hosted_zone_id": "Z00945701USJRS9EZXPCY"
              },
              {
                "dns_name": "streaming-logs.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z06105521RKPABU5MWL7Y"
              },
              {
                "dns_name": "streaming-logs.us-west-1.api.aws",
                "hosted_zone_id": "Z06341541I059E7LPEEE9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06b8e011c36b307f2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0224f9d839c07f9fa",
              "eni-064f679684fd4d9c4"
            ],
            "owner_id": "909799647907",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-01314471ce12f46e0"
            ],
            "service_name": "com.amazonaws.us-west-1.logs",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.11.94",
                "subnet_id": "subnet-05f17513bb125add4"
              },
              {
                "ipv4": "10.10.12.229",
                "subnet_id": "subnet-0f22eb0fe7c7915ac"
              }
            ],
            "subnet_ids": [
              "subnet-05f17513bb125add4",
              "subnet-0f22eb0fe7c7915ac"
            ],
            "tags": {
              "Name": "private-eks-cluster-logs-endpoint"
            },
            "tags_all": {
              "Name": "private-eks-cluster-logs-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints_sg",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:vpc-endpoint/vpce-08a33815455d2ddaf",
            "dns_entry": [
              {
                "dns_name": "vpce-08a33815455d2ddaf-qqnrvtgr.sts.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-08a33815455d2ddaf-qqnrvtgr-us-west-1c.sts.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-08a33815455d2ddaf-qqnrvtgr-us-west-1a.sts.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "sts.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z025397629ZR6GLM3CWEK"
              },
              {
                "dns_name": "sts.us-west-1.api.aws",
                "hosted_zone_id": "Z01052671Z35YZKIXBRG9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08a33815455d2ddaf",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a2babb811dc708c7",
              "eni-0a3a2e4dc72b3da49"
            ],
            "owner_id": "909799647907",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-01314471ce12f46e0"
            ],
            "service_name": "com.amazonaws.us-west-1.sts",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.11.87",
                "subnet_id": "subnet-05f17513bb125add4"
              },
              {
                "ipv4": "10.10.12.41",
                "subnet_id": "subnet-0f22eb0fe7c7915ac"
              }
            ],
            "subnet_ids": [
              "subnet-05f17513bb125add4",
              "subnet-0f22eb0fe7c7915ac"
            ],
            "tags": {
              "Name": "private-eks-cluster-sts-endpoint"
            },
            "tags_all": {
              "Name": "private-eks-cluster-sts-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints_sg",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:909799647907:vpc-endpoint/vpce-04627caa63d8595ba",
            "cidr_blocks": [
              "52.219.220.0/23",
              "52.219.120.0/22",
              "16.15.0.0/21",
              "52.219.216.0/23",
              "52.219.194.0/24",
              "52.219.24.0/21",
              "52.219.112.0/21",
              "3.5.160.0/22",
              "52.219.255.0/24",
              "52.219.192.0/23"
            ],
            "id": "vpce-04627caa63d8595ba",
            "owner_id": "909799647907",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ba54002",
            "private_dns_enabled": false,
            "region": "us-west-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03d48cfcf80ba0660",
              "rtb-06a876c6fb84ab4ea"
            ],
            "service_name": "com.amazonaws.us-west-1.s3",
            "service_region": "us-west-1",
            "state": "available",
            "tags": {
              "Name": "private-eks-cluster-s3-endpoint"
            },
            "tags_all": {
              "Name": "private-eks-cluster-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d9268359fbd3a194"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}